# wsr_creation_agent

./: .env.example  .gitignore  CODEOWNERS  Makefile  README.md  WSRCreation_Agent_PRD.md  WSRCreation_Agent_SystemDesign.md  pyproject.toml
agent/: pyproject.toml
agent/src/chains/: __init__.py  provider_adapter.py
agent/src/chains/providers/: __init__.py
agent/src/evaluators/: __init__.py  insight_signals.py
agent/src/graphs/: __init__.py  wsr_generation_graph.py
agent/src/human_review/: __init__.py
agent/src/nodes/: wsr_generation_nodes.py
agent/src/retrieval/: __init__.py  approved_history.py
agent/src/safety/: __init__.py
agent/src/schemas/: __init__.py
agent/src/state/: checkpoint_store.py  generation_state.py
agent/tests/: test_agent_scaffold.py  test_phase_6_generation.py
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_core_schema.py
backend/src/api/v1/: delivery_models.py  router.py  wsr_approvals.py  wsr_dashboard.py  wsr_drafts.py  wsr_exports.py
backend/src/app/: create_app.py  settings.py
backend/src/db/: base.py  session.py
backend/src/db/models/: __init__.py  account.py  admin_setting.py  ai_draft.py  ai_insight.py  approval_event.py  audit_log.py  delivery_model_config.py  export_attempt.py  project.py  project_assignment.py  user.py  workflow_checkpoint.py  (+4 more)
backend/src/domain/: __init__.py
backend/src/observability/: __init__.py
backend/src/repositories/: wsr_approval_repository.py  wsr_dashboard_repository.py  wsr_draft_repository.py  wsr_export_repository.py
backend/src/schemas/: __init__.py
backend/src/services/: pptx_export_renderer.py  wsr_approval_service.py  wsr_dashboard_service.py  wsr_draft_service.py  wsr_export_service.py
backend/tests/unit/: test_backend_smoke.py  test_database_schema.py  test_delivery_model_metadata.py  test_delivery_model_validation.py  test_wsr_approval_api.py  test_wsr_dashboard_api.py  test_wsr_draft_api.py  test_wsr_export_api.py  test_wsr_prefill.py  test_wsr_risk_rows.py
shared/: pyproject.toml
shared/src/wsr_shared/: __init__.py  api.py  dtos.py  enums.py
shared/tests/: test_shared_contracts.py  test_workspace_metadata.py
(+46 files in other folders)
