[project]
name = "wsr-creation-agent-workspace"
version = "0.1.0"
description = "Workspace root for the WSR Creation Agent monorepo."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.uv.workspace]
members = ["backend", "agent", "shared"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "agent/tests", "shared/tests"]
pythonpath = ["backend/src", "agent/src", "shared/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
