[project]
name = "wsr-backend"
version = "0.1.0"
description = "FastAPI backend for WSR Creation Agent."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5",
  "fastapi>=0.118.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.51",
  "uvicorn[standard]>=0.37.0",
  "wsr-shared",
]

[tool.uv.sources]
wsr-shared = { workspace = true }

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

